--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "firebase": "^8.3.1",
     "firebaseui": "^4.8.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preghdeploy": "npm run build",
+    "ghdeploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +39,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage-aide": "Avant de déployer sur GitHub Pages vous devez configurer correctement la propriété homepage ci-dessus : 1) retirer le suffixe '-inactif' de l'étiquette, et 2) remplacer le nom de compte et le nom de dépôt GitHub par les vôtres dans la valeur de la propriété.",
+  "homepage-inactif": "https://VOTRE_USERNAME_GITHUB.github.io/VOTRE_NOM_DE_DEPOT_GITHUB/"
 }
